--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -37,6 +37,25 @@
   <hr />
 
   <!-- TODO #4 - Loop over the search results to display all job fields. -->
+    <table class="job-listing" th:each="job : ${jobs}">
+        <tr >
+            <td>Name</td>
+            <td th:text="${job.name}"></td>
+        </tr>
+        <tr>
+            <td>Employer</td>
+            <td th:text="${job.employer}"></td>
+        <tr>
+            <td>Location</td>
+            <td th:text="${job.location}"></td>
+        <tr >
+            <td>Position Type</td>
+            <td th:text="${job.positionType}"></td>
+        <tr >
+            <td>Core Competency</td>
+            <td th:text="${job.coreCompetency}"></td>
+        </tr>
+    </table>
 
 </div>
 
