--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -7,12 +7,29 @@
 <div th:replace="~{fragments :: page-header}"></div>
 
 <div class="container body-content">
-
   <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
   <!-- TODO #1 - Use a loop to display job results in a table. -->
-
+    <table class="job-listing" th:each="job : ${jobs}">
+      <tr >
+        <td>Name</td>
+        <td th:text="${job.name}"></td>
+      </tr>
+      <tr>
+        <td>Employer</td>
+        <td th:text="${job.employer}"></td>
+      <tr>
+        <td>Location</td>
+        <td th:text="${job.location}"></td>
+      <tr >
+        <td>Position Type</td>
+        <td th:text="${job.positionType}"></td>
+      <tr >
+        <td>Core Competency</td>
+        <td th:text="${job.coreCompetency}"></td>
+      </tr>
+    </table>
 </div>
-
 </body>
+
 </html>
