--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,6 +11,10 @@
 
   <!-- TODO #1 - Use a loop to display job results in a table. -->
     <table class="job-listing" th:each="job : ${jobs}">
+      <tr>
+        <td>ID</td>
+        <td th:text="${job.id}"></td>
+      </tr>
       <tr >
         <td>Name</td>
         <td th:text="${job.name}"></td>
@@ -18,13 +22,16 @@
       <tr>
         <td>Employer</td>
         <td th:text="${job.employer}"></td>
+      </tr>
       <tr>
         <td>Location</td>
         <td th:text="${job.location}"></td>
-      <tr >
+      </tr>
+      <tr>
         <td>Position Type</td>
         <td th:text="${job.positionType}"></td>
-      <tr >
+    </tr>
+      <tr>
         <td>Core Competency</td>
         <td th:text="${job.coreCompetency}"></td>
       </tr>
