--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -39,6 +39,10 @@
   <!-- TODO #4 - Loop over the search results to display all job fields. -->
     <table class="job-listing" th:each="job : ${jobs}">
         <tr>
+            <td>ID</td>
+            <td th:text="${job.id}"></td>
+        </tr>
+        <tr>
             <td>Name</td>
             <td th:text="${job.name}"></td>
         </tr>
